Update tests for authentication / authorization